tests/ui/badpaste.stderr
error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:14:18
   |
14 |         ${paste $ttype _ $ftype}
   |                  ^^^^^

error: multiple nontrivial entries in ${paste ...}
  --> ui/badpaste.rs:14:27
   |
14 |         ${paste $ttype _ $ftype}
   |                           ^^^^^

error: not allowed in within ${paste ...} (or case_changing)
  --> ui/badpaste.rs:21:29
   |
21 |     struct ${paste $tname _ 42};
   |                             ^^

error: expected one of `!` or `::`, found `Broken`
  --> ui/badpaste.rs:30:23
   |
30 |     ${paste tdefkwed} Broken { }
   |                       ^^^^^^ expected one of `!` or `::`
